[tool.poetry]
name = "food"
version = "0.1.0"
description = ""
authors = ["Mikhail Kyzyma <mkyzyma@gmail.com>"]
readme = "README.md"

packages = [
  { include = "domain" },
  { include = "api" },
  { include = "infrastructure" },
 
]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.46"
sqlalchemy-orm = "^1.2.3"
pydantic = "^1.10.4"
sqlalchemy-utils = "^0.39.0"
fastapi = "^0.89.1"
fastapi-utils = "^0.2.1"
uvicorn = "^0.20.0"
psycopg2 = "^2.9.5"
aiosqlite = "^0.18.0"
pydantic-partial = "^0.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
